Añadido control de volumen individual de sonidos y seleccion de banco de sonidos (falta incluir los sonidos del banco campo/).

--- a/Pendulo3D/data/config.json
+++ b/Pendulo3D/data/config.json
@@ -1,22 +1,72 @@
 {
-  "audio_files": [
-    "do3",
-    "do3",
-    "re3",
-    "re3",
-    "mi3",
-    "fa3",
-    "fa3",
-    "sol3",
-    "sol3",
-    "la3",
-    "la3",
-    "si3"
+  "soundSets": [
+    {
+      "folder": "piano/",
+      "volumes": [
+        0.40740740299224854,
+        0.6370370388031006,
+        0.7629629373550415,
+        0.7925925850868225,
+        0.8296296000480652,
+        0.7925925850868225,
+        0.7185184955596924,
+        0.6222221851348877,
+        0.5111110806465149,
+        0.385185182094574,
+        0.3777777850627899,
+        0.4592592418193817
+      ],
+      "files": [
+        "do3",
+        "do3",
+        "re3",
+        "re3",
+        "mi3",
+        "fa3",
+        "fa3",
+        "sol3",
+        "sol3",
+        "la3",
+        "la3",
+        "si3"
+      ]
+    },
+    {
+      "folder": "campo/",
+      "volumes": [
+        0.8999999761581421,
+        0.8999999761581421,
+        0.8999999761581421,
+        0.8999999761581421,
+        0.8999999761581421,
+        0.8999999761581421,
+        0.8999999761581421,
+        0.8999999761581421,
+        0.8999999761581421,
+        0.8999999761581421,
+        0.8999999761581421,
+        0.8999999761581421
+      ],
+      "files": [
+        "do3",
+        "do3",
+        "re3",
+        "re3",
+        "mi3",
+        "fa3",
+        "fa3",
+        "sol3",
+        "sol3",
+        "la3",
+        "la3",
+        "si3"
+      ]
+    }
   ],
-  "audio_folder": "piano/",
-  "volumeGlb": 0.8999999761581421,
+  "volumeGlb": 0.8333333730697632,
   "minAngleGlb": 0.05000000074505806,
   "dtGlb": 0.30000001192092896,
-  "drag": 0.05000000074505806,
-  "hitForfeGlb": 0.4000000059604645
+  "drag": 0.0013333334354683757,
+  "currentSoundSet": 0,
+  "hitForfeGlb": 0.7200000286102295
 }
